--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>ArtSky</title>
   </head>
   <body style="margin:0;min-height:100vh;background:#0f0f1a;color:#e8e8f0">
-    <div id="root"></div>
+    <div id="root"><p style="margin:0;padding:2rem;text-align:center;color:#8888a0">Loading…</p></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
