--- a/index.html
+++ b/index.html
@@ -3,19 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <script>
-      (function(){var t=localStorage.getItem('artsky-theme');if(t==='light'||t==='dark')document.documentElement.setAttribute('data-theme',t);})();
+      (function(){
+        var t = localStorage.getItem('artsky-theme');
+        var resolved = t === 'light' || t === 'dark' ? t : (typeof window !== 'undefined' && window.matchMedia && window.matchMedia('(prefers-color-scheme: light)').matches ? 'light' : 'dark');
+        document.documentElement.setAttribute('data-theme', resolved);
+      })();
     </script>
+    <style>
+      html[data-theme="light"] body { background: #f2f2f7; color: #1c1c1e; }
+      html[data-theme="light"] #root p { color: #8e8e93; }
+      html[data-theme="dark"] body, body { background: #0f0f1a; color: #e8e8f0; }
+      html[data-theme="dark"] #root p, #root p { color: #8888a0; }
+    </style>
     <link rel="icon" type="image/svg+xml" href="/artsky/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=5, user-scalable=yes" />
-    <meta name="theme-color" content="#0f0f1a" />
+    <meta name="theme-color" content="#0f0f1a" media="(prefers-color-scheme: dark)" />
+    <meta name="theme-color" content="#f2f2f7" media="(prefers-color-scheme: light)" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="ArtSky" />
     <meta name="mobile-web-app-capable" content="yes" />
     <title>ArtSky</title>
   </head>
-  <body style="margin:0;min-height:100vh;min-height:100dvh;background:#0f0f1a;color:#e8e8f0">
-    <div id="root"><p style="margin:0;padding:2rem;text-align:center;color:#8888a0">Loading…</p></div>
+  <body style="margin:0;min-height:100vh;min-height:100dvh">
+    <div id="root"><p style="margin:0;padding:2rem;text-align:center">Loading…</p></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
