--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       html[data-theme="dark"] body, body { background: #0f0f1a; color: #e8e8f0; }
       html[data-theme="dark"] #root p, #root p { color: #8888a0; }
     </style>
-    <link rel="icon" type="image/svg+xml" href="/artsky/icon.svg" />
+    <link rel="icon" type="image/svg+xml" href="./icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=5, user-scalable=yes" />
     <meta name="theme-color" content="#0f0f1a" media="(prefers-color-scheme: dark)" />
     <meta name="theme-color" content="#f2f2f7" media="(prefers-color-scheme: light)" />
