--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
     </style>
     <link rel="icon" type="image/svg+xml" href="./icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=5, user-scalable=yes" />
-    <meta name="theme-color" content="#0f0f1a" media="(prefers-color-scheme: dark)" />
-    <meta name="theme-color" content="#ebeae6" media="(prefers-color-scheme: light)" />
+    <!-- Theme-color only on desktop so mobile safe areas stay transparent when navbars hide -->
+    <meta name="theme-color" content="#0f0f1a" media="(min-width: 768px) and (prefers-color-scheme: dark)" />
+    <meta name="theme-color" content="#ebeae6" media="(min-width: 768px) and (prefers-color-scheme: light)" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="ArtSky" />
